Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Change-Id: Ibc94041804c1cc27f6517165881ab5b686bcfafc
Signed-off-by: Edwin Kempin <ekempin@google.com>