@@ -22,7 +22,6 @@ import static com.google.gerrit.testing.GerritJUnit.assertThrows;
 import com.google.common.truth.Truth8;
 import com.google.gerrit.plugins.codeowners.acceptance.AbstractCodeOwnersTest;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import org.junit.Test;
 
@@ -53,7 +52,7 @@ public class CodeOwnerConfigReferenceTest extends AbstractCodeOwnersTest {
 
   @Test
   public void absoluteFilePathCanBeSpecifiedInDifferentFormats() throws Exception {
-    Path expectedPath = Paths.get("/foo/OWNERS");
+    Path expectedPath = Path.of("/foo/OWNERS");
     for (String inputPath : new String[] {"/foo/OWNERS", "//foo/OWNERS"}) {
       Path path =
           CodeOwnerConfigReference.create(CodeOwnerConfigImportMode.ALL, inputPath).filePath();
@@ -66,7 +65,7 @@ public class CodeOwnerConfigReferenceTest extends AbstractCodeOwnersTest {
   public void relativeFilePathCanBeSpecified() throws Exception {
     Path path =
         CodeOwnerConfigReference.create(CodeOwnerConfigImportMode.ALL, "foo/OWNERS").filePath();
-    Truth8.assertThat(path).isEqualTo(Paths.get("foo/OWNERS"));
+    Truth8.assertThat(path).isEqualTo(Path.of("foo/OWNERS"));
     assertThat(path.isAbsolute()).isFalse();
   }
 }
